syntax = "proto3";
option java_multiple_files =  true;
option java_package = "com.ssd.grpc";
// The greeting service definition.
service Auction {
  rpc Ping (NodeInfoGRPC) returns (PingResponse) {}
  rpc FindNode (NodeInfoGRPC) returns (stream NodeInfoGRPC) {}
  rpc PropagateBlock (BlockGRPC) returns (Ack) {}
  rpc getBlockchain (NodeInfoGRPC) returns (stream BlockGRPC) {}
  rpc ListAuctions(Id) returns (stream TransactionApp) {}
  rpc SubmitTransaction(TransactionApp) returns (Ack) {}
}
message PingResponse {
  string response =1;
}

message NodeID {   
  string id = 1;
}

message NodeInfoGRPC {
  string id = 1;
  string ip =2;
  int32 port = 3;
}


message Ack {
  string acknowledge = 1;
}
message TransactionsList {
  repeated TransactionApp transactionList = 1;
}

message TransactionApp {
  string type =1;       
  int32 userId =2;
  int32 auctionId = 4; 
  int32 amount = 5;
  string item = 6;
}

message BlockGRPC {
  string prevHash = 1;
  int64 timestamp = 2;
  int32 nonce = 3;
  string blockHash = 4;
  string merkleRoot = 5;
  TransactionsList transactionsList = 6;
  NodeInfoGRPC ninfo = 7;
}

message Id {
  int32 id =1;
}

